# ML_SALES

./: .gitignore
mlautos/: README.md  pyproject.toml
mlautos/src/mlautos/: __init__.py  __main__.py
mlautos/src/mlautos/pipelines/pipeline_ml/: __init__.py  nodes.py  pipeline.py
mlsales/: README.md  pyproject.toml
mlsales/conf/base/: catalog.yml  parameters_pipeline_ml.yml
mlsales/src/mlautos/: settings.py
mlsales/src/mlsales/pipelines/data_processing/: nodes.py  pipeline.py
mlsales/tests/pipelines/pipeline_ml/: test_pipeline.py
